--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-
-    <h1 id="alert"></h1>
+    <!--
+    <button id="getTabs">Get Tabs</button>
+    -->
+    <h1>Current open tabs</h1>
     <div id="list" class="list"></div>
-    <button>Select Random</button>
+    <button id="selectRandom">Select Random</button>
     
-
     <script src="./script.js" type="module"></script>
   </body>
 </html>
