works as intended, ui needs improvement

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!--
-    <button id="getTabs">Get Tabs</button>
-    -->
-    <h1>Current open tabs</h1>
+    <h1>Currently open tabs</h1>
     <div id="list" class="list"></div>
     <button id="selectRandom">Select Random</button>
     
