--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Currently open tabs</h1>
-    <div id="list" class="list"></div>
-    <button id="selectRandom">Select Random</button>
+    <div class="container">
+      <h1>Currently open tabs</h1>
+      <div id="list" class="list"></div>
+      <button id="selectRandom">Select Random</button>
+    </div>
     
     <script src="./script.js" type="module"></script>
   </body>
