--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Currently open tabs</h1>
+      <h1>Open Tabs</h1>
       <div id="list" class="list"></div>
-      <button id="selectRandom">Select Random</button>
+      <button id="selectRandom">Pick One</button>
     </div>
     
     <script src="./script.js" type="module"></script>
