--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <div class="container">
       <div id="list" class="list"></div>
-      <button id="selectRandom">Pick One</button>
+      <div class="button-container">
+        <button id="selectOne">Pick One</button>
+        <button id="selectMultiple">Pick Multiple</button>
+      </div>
+      
     </div>
     <script src="./script.js" type="module"></script>
   </body>
