remove delete button and div on press to delete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="selectOne">Pick One</button>
         <button id="selectMultiple">Pick Multiple</button>
       </div>
+      <p id="availableTabs" class="available-tabs"> A selection will be made between <span id="span" style="color:blue"></span> tabs</p>
       <div id="list" class="list"></div>
     </div>
     <script src="./script.js" type="module"></script>
