changed the theme to light mode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="selectMultiple">Pick Multiple</button>
       </div>
       <p id="availableTabs" class="available-tabs"> A selection will be made between <span id="span"></span> tabs</p>
+      <p id="warningMessage" class="warning-message"> You need to leave at least one tab selected</p>
       <div id="list" class="list"></div>
     </div>
     <script src="./script.js" type="module"></script>
