--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="mainContainer" class="main-container">
+    <div class="main-container">
       <div class="button-container">
         <button id="buttonPickOne" class="button__pick-one">Pick One</button>
         <button id="buttonPickMultiple" class="button__pick-multiple">Pick Multiple</button>
